fix: social links spacing

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,9 +23,6 @@
     @include breakpoint(sm) {
       margin-bottom: $layout--lg;
     }
-    @include breakpoint(md) {
-      margin-bottom: $layout--xl;
-    }
   }
 }
 
